# light/proxy/routes.go
@@ -31,8 +31,8 @@ func RPCRoutes(c *lrpc.Client) map[string]*rpcserver.RPCFunc {
 		"block_results":        rpcserver.NewRPCFunc(makeBlockResultsFunc(c), "height"),
 		"commit":               rpcserver.NewRPCFunc(makeCommitFunc(c), "height"),
 		"tx":                   rpcserver.NewRPCFunc(makeTxFunc(c), "hash,prove"),
-		"tx_search":            rpcserver.NewRPCFunc(makeTxSearchFunc(c), "query,prove,page,per_page,order_by"),
-		"block_search":         rpcserver.NewRPCFunc(makeBlockSearchFunc(c), "query,page,per_page,order_by"),
+		"tx_search":            rpcserver.NewRPCFunc(makeTxSearchFuncMatchEvents(c), "query,prove,page,per_page,order_by,match_events"),
+		"block_search":         rpcserver.NewRPCFunc(makeBlockSearchFuncMatchEvents(c), "query,page,per_page,order_by,match_events"),
 		"validators":           rpcserver.NewRPCFunc(makeValidatorsFunc(c), "height,page,per_page"),
 		"dump_consensus_state": rpcserver.NewRPCFunc(makeDumpConsensusStateFunc(c), ""),
 		"consensus_state":      rpcserver.NewRPCFunc(makeConsensusStateFunc(c), ""),
@@ -158,42 +158,52 @@ func makeTxFunc(c *lrpc.Client) rpcTxFunc {
 	}
 }
 
-type rpcTxSearchFunc func(
+type rpcTxSearchFuncMatchEvents func(
 	ctx *rpctypes.Context,
 	query string,
 	prove bool,
 	page, perPage *int,
 	orderBy string,
+	matchEvents bool,
 ) (*ctypes.ResultTxSearch, error)
 
-func makeTxSearchFunc(c *lrpc.Client) rpcTxSearchFunc {
+func makeTxSearchFuncMatchEvents(c *lrpc.Client) rpcTxSearchFuncMatchEvents {
 	return func(
 		ctx *rpctypes.Context,
 		query string,
 		prove bool,
 		page, perPage *int,
 		orderBy string,
+		matchEvents bool,
 	) (*ctypes.ResultTxSearch, error) {
+		if matchEvents {
+			query = query + " AND match.events = 1"
+		}
 		return c.TxSearch(ctx.Context(), query, prove, page, perPage, orderBy)
 	}
 }
 
-type rpcBlockSearchFunc func(
+type rpcBlockSearchFuncMatchEvents func(
 	ctx *rpctypes.Context,
 	query string,
 	prove bool,
 	page, perPage *int,
 	orderBy string,
+	matchEvents bool,
 ) (*ctypes.ResultBlockSearch, error)
 
-func makeBlockSearchFunc(c *lrpc.Client) rpcBlockSearchFunc {
+func makeBlockSearchFuncMatchEvents(c *lrpc.Client) rpcBlockSearchFuncMatchEvents {
 	return func(
 		ctx *rpctypes.Context,
 		query string,
 		prove bool,
 		page, perPage *int,
 		orderBy string,
+		matchEvents bool,
 	) (*ctypes.ResultBlockSearch, error) {
+		if matchEvents {
+			query = query + " AND match.events = 1"
+		}
 		return c.BlockSearch(ctx.Context(), query, page, perPage, orderBy)
 	}
 }
